--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,37 @@
-== README
+Before pushing to CF it's important to execute the following command:
+bundle install --deployment
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+<!-- <table>
+  <thead>
+    <tr>
+      <th>Memory</th>
+      <th>Memoryfree</th>
+      <th>Processors</th>
+      <th>Heapcommited</th>
+      <th>Heapinit</th>
+      <th>Heapused</th>
+      <th>Environment</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-Things you may want to cover:
+  <tbody>
+    <% @metrics.each do |metric| %>
+      <tr>
+        <td><%= metric.memory %></td>
+        <td><%= metric.memoryFree %></td>
+        <td><%= metric.processors %></td>
+        <td><%= metric.heapCommited %></td>
+        <td><%= metric.heapInit %></td>
+        <td><%= metric.heapUsed %></td>
+        <td><%= metric.environment %></td>
+        <td><%= link_to 'Show', metric %></td>
+        <td><%= link_to 'Edit', edit_metric_path(metric) %></td>
+        <td><%= link_to 'Destroy', metric, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table> -->
+<br>
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+<!-- <%= link_to 'New Metric', new_metric_path %> -->
